targeted wrapper divs with overflow:hidden and height:100vh instead of body to stop scrolling on mobile safari

--- a/client/src/pages/Pages.module.css
+++ b/client/src/pages/Pages.module.css
@@ -5,10 +5,6 @@
   width: 100vw;
 }
 
-.modalOpen {
-  overflow: hidden;
-}
-
 .backgroundnull {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
     url(../images/fullbackgroundtexture.png) !important;
@@ -324,6 +320,13 @@
   .spellbookCardContainer {
     padding-top: 70px;
   }
+}
+
+.modalOpen {
+  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  height: 100vh;
 }
 
 /* @media (min-width: 800px) {
